Settings: Configurable 0, 90, 180 and 270 degree rotation [2/2]
- Checkboxes are a thing of the past, Switches is where is at! #YOLOHOLO am I right?

Change-Id: I8301125e38c0c4f7d1d9dec6082a58901509ce11
Signed-off-by: DennySPB <dennyspb@gmail.com>

--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -148,4 +148,14 @@
     <!-- Lockscreen rotation -->
     <string name="lockscreen_rotation_title">Автоповорот экрана блокировки</string>
 
+    <!-- Display : Rotation -->
+    <string name="display_rotation_title">Автоповорот</string>
+    <string name="display_rotation_disabled">Отключен</string>
+    <string name="display_rotation_unit">градусов</string>
+    <string name="display_rotation_category_title">Режимы поворота</string>
+    <string name="display_rotation_0_title">0 градусов</string>
+    <string name="display_rotation_90_title">90 градусов</string>
+    <string name="display_rotation_180_title">180 градусов</string>
+    <string name="display_rotation_270_title">270 градусов</string>
+
 </resources>
