Settings: Reset battery stats [2/2]
AOSiP edits: Use AOSP 'ok' string rather than add our own.

Change-Id: I859c694d13085b48e363b0537c6c1d384acb8989
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>
Signed-off-by: DennySPB <dennyspb@gmail.com>

--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -158,4 +158,8 @@
     <string name="display_rotation_180_title">180 градусов</string>
     <string name="display_rotation_270_title">270 градусов</string>
 
+    <!-- Battery stats reset -->
+    <string name="battery_stats_reset">Сброс статистики</string>
+    <string name="battery_stats_message">Статистика использования батареи будет сброшена</string>
+
 </resources>
