--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -121,5 +121,11 @@
     <!-- Quick unlock -->
     <string name="unlock_quick_unlock_control_title">Быстрая разблокировка</string>
     <string name="unlock_quick_unlock_control_summary">Разблокировать устройство без нажатия OK</string>
+    
+    <string name="reset_all_settings">Сбросить все</string>
+    <string name="reset_selected_settings">Сбросить выбранное</string>
+    <string name="reset_settings_title">Пользовательские настройки</string>
+    <string name="reset_settings_summary">Сбросить пользовательские настройки Syberia</string>
+    <string name="keywords_settings_reset">сброс</string>
 
 </resources>
