--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -141,4 +141,8 @@
 
     <string name="weather_title">Weather</string>
 
+    <!-- Quick unlock -->
+    <string name="unlock_quick_unlock_control_title">Quick unlock</string>
+    <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
+
 </resources>
