--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -29,4 +29,11 @@
     <string name="device_part_title">Device features</string>
     <string name="device_part_summary">Device Speicific Features</string>
 
+    <string name="dashboard_conditions_title">Dashboard conditions</string>
+    <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string>
+    <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string>
+    <string name="dashboard_suggestions_title">Dashboard suggestions</string>
+    <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string>
+    <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string>
+
 </resources>
