--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -47,4 +47,7 @@
     <!-- Sound: Title for the option defining the phone ringtone for slot2 on Muilti SIM device. [CHAR LIMIT=50] -->
     <string name="ringtone2_title">Рингтон - SIM 2</string>
 
+    <!-- Charging vibration -->
+    <string name="charging_vibro_title">Вибрация при подкл. зарядки</string>
+
 </resources>
