--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -50,4 +50,6 @@
     <!-- Charging vibration -->
     <string name="charging_vibro_title">Вибрация при подкл. зарядки</string>
 
+    <!-- Screenshot sound -->
+    <string name="screenshot_sound_title">Звук при снятии скриншота</string>
 </resources>
