Settings: Add switch for linked ring and media notification volumes
Change-Id: I900af398f566a5415c44fe883cc214985f4e9cd4
Signed-off-by: blinoff82 <blinov.in@gmail.com>

--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -135,5 +135,8 @@
     <string name="app_notification_sound_timeout_value_5_minutes">5 минут</string>
     <string name="app_notification_sound_timeout_value_15_minutes">10 минут</string>
     <string name="app_notification_sound_timeout_value_30_minutes">30 минут</string>
+    
+    <!-- Volume link notification -->
+    <string name="volume_link_notification_title">Связать громкость звонка и уведомлений</string>
 
 </resources>
