Allow to customize notification led light [1/2] Reworked with Controllers for P Thanks @maxwen and @ezio84 for old patches in O
Signed-off-by: blinoff82 <blinov.in@gmail.com>
Change-Id: I73e615a0548dde759664a80e3d16ce42da8d0239

--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -139,4 +139,10 @@
     <!-- Volume link notification -->
     <string name="volume_link_notification_title">Связать громкость звонка и уведомлений</string>
 
+    <!-- Custom light color -->
+    <string name="custom_light_title">Цвет светодиода</string>
+    <string name="custom_light_on_time_title">Длительность свечения светодиода (мс)</string>
+    <string name="custom_light_off_time_title">Длительность затухания светодиода (мс)</string>
+    <string name="value_equals_default">умолч.</string>
+
 </resources>
