--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -139,4 +139,6 @@
     <string name="changelog_loading">Loading changelog\u2026</string>
     <string name="changelog_error">Unable to load changelog</string>
 
+    <string name="weather_title">Weather</string>
+
 </resources>
