--- a/res/xml/ambient_display_settings.xml
+++ b/res/xml/ambient_display_settings.xml
@@ -64,6 +64,11 @@
         <Preference
             android:key="ambient_display_custom"
             android:title="@string/advanced_settings" />
+	    
+	<!-- Illustration for Ambient Ticker -->
+	<Preference android:key="ambient_ticker_illustration"
+            android:enabled="false"
+            android:layout="@layout/ambient_ticker_illustration" />
 
         <com.syberia.settings.preference.SystemSettingSwitchPreference
             android:key="force_ambient_for_media"
