Ambient music ticker: Make it look nicer by adding an illustration
Borrowed from Google Pixel factory image.

Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>
Change-Id: I690ac7e0719fe30e64dc394ca261a18f857aa8da
Signed-off-by: blinoff82 <blinov.in@gmail.com>

--- a/res/xml/ambient_display_settings.xml
+++ b/res/xml/ambient_display_settings.xml
@@ -65,6 +65,11 @@
             android:key="ambient_display_custom"
             android:title="@string/advanced_settings" />
 
+	<!-- Illustration for Ambient Ticker -->
+	<Preference android:key="ambient_ticker_illustration"
+            android:enabled="false"
+            android:layout="@layout/ambient_ticker_illustration" />
+
         <com.syberia.settings.preference.SystemSettingSwitchPreference
             android:key="force_ambient_for_media"
             android:title="@string/force_ambient_for_media_title"
