--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -162,4 +162,11 @@
     <string name="battery_stats_reset">Сброс статистики</string>
     <string name="battery_stats_message">Статистика использования батареи будет сброшена</string>
 
+    <!-- Smart charging -->
+    <string name="smart_charging_title">Умная зарядка</string>
+    <string name="smart_charging_summary">Установить максимальный уровень заряда</string>
+    <string name="smart_charging_switch_title">Использовать умную зарядку</string>
+    <string name="smart_charging_level_title">Уровень включения</string>
+    <string name="smart_charging_footer">Умная зарядка позволяет установить максимальный уровень заряда чтобы продлить срок службы батареи</string>
+
 </resources>
