Settings: Add support for adaptive icons like on q [2/4]
[ @HrX03 - POSP ]
- Adds the method for those peeps
- Also converts every homepage drawable to use the new method

Change-Id: If335e63279e9076338644a964a3cb7c8f1d6d8d1
Signed-off-by: blinoff82 <blinov.in@gmail.com>

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -174,6 +174,10 @@
         android:entries="@array/systemui_theme_style_entries"
         android:entryValues="@array/systemui_theme_style_values"
         android:persistent="false" />
+	
+    <Preference
+        android:key="system_shape"
+	android:title="@string/system_shape" />
 
     <Preference
         android:key="vr_display_pref"
