--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -566,7 +566,8 @@
     <string name="smart_charging_title">Умная зарядка</string>
     <string name="smart_charging_summary">Установите максимальный уровень зарядки</string>
     <string name="smart_charging_switch_title">Использовать Умную зарядку</string>
-    <string name="smart_charging_level_title">Уровень запуска</string>
+    <string name="smart_charging_level_title">Уровень остановки зарядки</string>
+    <string name="smart_charging_resume_level_title">Заряжать при уровне</string>
     <string name="smart_charging_footer">Умная зарядка позволяет вам установить максимальный уровень зарядки, чтобы продлить срок службы вашей батареи</string>
 
     <string name="switch_brand_toolbar">Заголовок настроек</string>
