--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -168,6 +168,8 @@
     <string name="smart_charging_switch_title">Использовать умную зарядку</string>
     <string name="smart_charging_resume_level_title">Уровень возобновления зарядки</string>
     <string name="smart_charging_level_title">Уровень выключения зарядки</string>
+    <string name="smart_charging_reset_stats_title">Сбросить статискику батареи</string>
+    <string name="smart_charging_reset_stats_summary">Сбрасывать статистику при достижении максимального уровня заряда</string>
     <string name="smart_charging_footer">Умная зарядка позволяет установить максимальный уровень заряда чтобы продлить срок службы батареи</string>
 
 </resources>
