--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -568,6 +568,8 @@
     <string name="smart_charging_switch_title">Использовать Умную зарядку</string>
     <string name="smart_charging_level_title">Уровень остановки зарядки</string>
     <string name="smart_charging_resume_level_title">Заряжать при уровне</string>
+    <string name="smart_charging_reset_stats_title">Сброс статистики батареи</string>
+    <string name="smart_charging_reset_stats_summary">Сбрасывать статистику батареи после достижения заданного уровня заряда</string>
     <string name="smart_charging_footer">Умная зарядка позволяет вам установить максимальный уровень зарядки, чтобы продлить срок службы вашей батареи</string>
 
     <string name="switch_brand_toolbar">Заголовок настроек</string>
