Settings: update ru translation
Signed-off-by: blinoff82 <blinov.in@gmail.com>
Change-Id: Ibaa59732dc9bc129f89ff1e0a94481a6621fc26c

--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -42,7 +42,7 @@
     <string name="theme_accent_picker_summary">Выберите цвет акцента для системной темы</string>
     <string name="theme_accent_picker_default">По умолчанию</string>
 
-    <string name="theme_category_title">Системная тема</string>
+    <string name="theme_category_title">Пользовательские настройки интерфейса</string>
 
     <!-- SystemUI theme -->
     <string name="systemui_theme_style_title">Тема SystemUI</string>
