--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -45,7 +45,7 @@
     <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
     <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
     
-    <string name="theme_category_title">System theme</string>
+    <string name="theme_category_title">User Interface Settings</string>
     
     <!-- SystemUI theme -->
     <string name="systemui_theme_style_title">SystemUI theme</string>
