--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -563,7 +563,7 @@
     <string name="adj_saturation_title">Насыщенность</string>
     <string name="adj_intensity_title">Интенсивность</string>
     <string name="adj_contrast_title">Контраст</string>
-    
+
     <!-- Smart charging -->
     <string name="smart_charging_title">Умная зарядка</string>
     <string name="smart_charging_summary">Установите максимальный уровень зарядки</string>
@@ -577,4 +577,9 @@
     <string name="switch_brand_toolbar">Заголовок настроек</string>
     <string name="switch_brand_toolbar_summary_on">Отображать бренд Syberia OS и имя пользователя в заголовке настроек</string>
     <string name="switch_brand_toolbar_summary_off">Не отображать бренд Syberia OS и имя пользователя в заголовке настроек</string>
+
+    <!-- Hotspot extras -->
+    <string name="tethering_allow_vpn_upstreams_title">Разрешить клиентам использовать VPN</string>
+    <string name="tethering_allow_vpn_upstreams_summary">Разрешить устройствам, подключенным к этой точке доступа, использовать VPN соединение</string>
+
 </resources>
