--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -551,4 +551,8 @@
     <string name="thermal_control_per_app_video_playback">Video playback</string>
     <string name="thermal_control_per_app_dialer">Dialer</string>
     <string name="thermal_control_per_app_camera">Camera</string>
+
+    <!-- Hotspot extras -->
+    <string name="tethering_allow_vpn_upstreams_title">Allow clients to use VPNs</string>
+    <string name="tethering_allow_vpn_upstreams_summary">Permit hotspot clients to use this device\u2019s VPN connections for upstream connectivity</string>
 </resources>
