Substratum: enable FORCE_AUTHORIZE_SUBSTRATUM_PACKAGES by default
Change-Id: Ia3e29cd24145b170797bb21800fcfb2a6cadab45
Signed-off-by: DennySPB <dennyspb@gmail.com>

--- a/res/xml/development_settings.xml
+++ b/res/xml/development_settings.xml
@@ -364,7 +364,8 @@
         <SwitchPreference
             android:key="force_rtl_layout_all_locales"
             android:title="@string/force_rtl_layout_all_locales"
-            android:summary="@string/force_rtl_layout_all_locales_summary" />
+            android:summary="@string/force_rtl_layout_all_locales_summary" 
+            android:defaultValue="true" />
 
         <com.android.settings.AnimationScalePreference
             android:key="window_animation_scale"
