--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -470,7 +470,7 @@
 
     <string name="hide_notch_title">Скрыть вырез</string>
     <string name="hide_notch_summary">Принудительно скрыть вырез экрана</string>
-    
+
     <!-- AmbientDisplay music ticker -->
     <string name="force_ambient_for_media_title">Музыкальное уведомление</string>
     <string name="force_ambient_for_media_summary">Показывать информацию о текущем треке на экране блокировки и во время переключения трека.</string>
@@ -478,6 +478,10 @@
     <!-- Switch styles -->
     <string name="switch_style_title">Стиль переключателей</string>
     <string name="switch_default">По умолчанию</string>
+
+    <!-- EdgeGesture service -->
+    <string name="edge_gesture_service_title">Блокировать результаты жестов касаний</string>
+    <string name="edge_gesture_service_summary">Не отправляйте приложениям результаты касаний жестов навигации и строки состояния </string>
 
     <!-- Android debugging over network -->
     <string name="adb_over_network">Отладка по сети</string>
