--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -37,5 +37,8 @@
     <string name="selinux_status_disabled">Отключен</string>
     <string name="selinux_status_permissive">Разрешающий</string>
     <string name="selinux_status_enforcing">Принудительный</string>
+    <string name="screenshot_shutter_sound_title">Звук снимка экрана</string>
+
+    <string name="battery_temp">Температура батареи</string>
 
 </resources>
