--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -56,4 +56,6 @@
     <string name="selinux_status_permissive">Permissive</string>
     <string name="selinux_status_enforcing">Enforcing</string>
 
+    <string name="battery_temp">Battery temperature</string>
+
 </resources>
