--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -118,4 +118,6 @@
     <string name="platform_revision">Платформа</string>
     <string name="total_ram">Всего оперативной памяти</string>
 
+    <string name="battery_temp">Температура батареи</string>
+
 </resources>
