--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -175,4 +175,10 @@
     <string name="hide_notch_title">Скрыть вырез</string>
     <string name="hide_notch_summary">Принудительно скрыть вырез экрана</string>
 
+    <!-- Navigation settings -->
+    <string name="back_height_low_label">Весь экран</string>
+    <string name="back_height_high_label">Низ экрана</string>
+    <string name="back_options_dialog_title">Опции</string>
+    <string name="back_height_message">Высота экрана используемая для жеста назад</string>
+
 </resources>
