Update RU translation
Signed-off-by: blinoff82 <blinov.in@gmail.com>

--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -115,5 +115,7 @@
     <string name="changelog_summary">С момента последнего обновления</string>
     <string name="changelog_loading">Загрузка списка изменений</string>
     <string name="changelog_error">Невозможно загрузить список изменений</string>
+    
+    <string name="weather_title">Погода</string>
 
 </resources>
