--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -121,5 +121,8 @@
     <!-- Quick unlock -->
     <string name="unlock_quick_unlock_control_title">Быстрая разблокировка</string>
     <string name="unlock_quick_unlock_control_summary">Разблокировать устройство без нажатия OK</string>
+    
+    <!-- Hide gesture navigation bar -->
+    <string name="hide_gesture_navigation_bar_title">Скрыть навигационную панель жестов</string>
 
 </resources>
