--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -144,5 +144,8 @@
     <!-- Quick unlock -->
     <string name="unlock_quick_unlock_control_title">Quick unlock</string>
     <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
+    
+    <!-- Hide gesture navigation bar -->
+    <string name="hide_gesture_navigation_bar_title">Hide gesture navigation bar</string>
 
 </resources>
