Allow navigation gesture bar to be hidden [2/2]
Navigation gesture bar takes 16dp space on the screen, allow the user
to hide it for extra screen real estate

Change-Id: I9dd687c7461c2726632b4560a7a2c1e636c13fc2
Signed-off-by: Lucchetto <lucchetto.tie@live.com>
Signed-off-by: blinoff82 <blinov.in@gmail.com>

--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -127,5 +127,8 @@
     <string name="reset_settings_title">Пользовательские настройки</string>
     <string name="reset_settings_summary">Сбросить пользовательские настройки Syberia</string>
     <string name="keywords_settings_reset">сброс</string>
+    
+    <!-- Hide gesture navigation bar -->
+    <string name="hide_gesture_navigation_bar_title">Скрыть навигационную панель жестов</string>
 
 </resources>
