--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -150,5 +150,8 @@
     <string name="reset_settings_title">Feature preferences</string>
     <string name="reset_settings_summary">Reset Paranoid Android feature preferences</string>
     <string name="keywords_settings_reset">reset</string>
+    
+    <!-- Hide gesture navigation bar -->
+    <string name="hide_gesture_navigation_bar_title">Hide gesture navigation bar</string>
 
 </resources>
