--- a/res/xml/app_info_settings.xml
+++ b/res/xml/app_info_settings.xml
@@ -183,6 +183,7 @@
         android:selectable="false"
         android:order="9999"
         settings:controller="com.android.settings.applications.appinfo.AppPackageNamePreferenceController"
-        settings:allowDividerAbove="true" />
+        settings:allowDividerAbove="true"
+        settings:enableCopying="true"/>
 
 </PreferenceScreen>
