Settings: Lockscreen rotation config support [2/2]
Signed-off-by: ZeNiXxX <zenixxx.havoc@gmail.com>
Signed-off-by: DennySPB <dennyspb@gmail.com>
Change-Id: I2b6a36d894f52e083dda492f05700db2e78669f5

--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -171,4 +171,7 @@
     <string name="custom_light_off_time_title">Light OFF time during led pulse (ms)"</string>
     <string name="value_equals_default">def</string>
 
+    <!-- Lockscreen rotation -->
+    <string name="lockscreen_rotation_title">Auto-rotate lockscreen</string>
+
 </resources>
