--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -82,6 +82,12 @@
         settings:keywords="@string/keywords_auto_rotate"
         settings:controller="com.android.settings.display.AutoRotatePreferenceController" />
 
+    <com.syberia.settings.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_rotation"
+        android:title="@string/lockscreen_rotation_title"
+        android:defaultValue="false"
+        android:dependency="auto_rotate" />
+
     <Preference
         android:key="color_mode"
         android:title="@string/color_mode_title"
