--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -145,4 +145,7 @@
     <string name="custom_light_off_time_title">Длительность затухания светодиода (мс)</string>
     <string name="value_equals_default">умолч.</string>
 
+    <!-- Lockscreen rotation -->
+    <string name="lockscreen_rotation_title">Автоповорот экрана блокировки</string>
+
 </resources>
