Protect sensitive info on About device
Tired of seeing people/see yourself editing every screenshot
to hide some personal info like their phone numbers or their IMEI?
Well, this commit will help by adding a custom string to inform the user
that, to get that info, they should tap that preference.
If you want to show them, you can make an overlay and set
configShowDeviceSensitiveInfo as true.

**DU Edits**
- Remove the bool/conditions and make this a permanent thing.

Change-Id: I56477332aacde7f64396c8f638bbbf6c18fd7c0e
Signed-off-by: blinoff82 <blinov.in@gmail.com>

--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -182,4 +182,7 @@
     <string name="back_options_dialog_title">Опции</string>
     <string name="back_height_message">Высота экрана используемая для жеста назад</string>
 
+    <!-- String for removal of sensitive info on about, depending on tap -->
+    <string name="device_info_protected_single_press">Нажать для отображения информации</string>
+
 </resources>
