--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -44,9 +44,6 @@
     <!-- Sound: Title for the option defining the phone ringtone for slot1 on Muilti SIM device. [CHAR LIMIT=50] -->
     <string name="ringtone1_title">Рингтон - SIM 1</string>
 
-    <!-- Notch: Full screen apps -->
-    <string name="display_cutout_force_fullscreen_title">Приложения в полный экран</string>
-    <string name="display_cutout_force_fullscreen_summary">Приложения будут принудительно игнорировать вырез экрана</string>
     
     <!-- LiveDisplay -->
     <string name="live_display_summary">Подстраивать экран на основе времени суток и освещения, чтобы повысить удобочитаемость и снизить нагрузку на глаза</string>
@@ -172,8 +169,12 @@
     <string name="smart_charging_reset_stats_summary">Сбрасывать статистику при достижении максимального уровня заряда</string>
     <string name="smart_charging_footer">Умная зарядка позволяет установить максимальный уровень заряда чтобы продлить срок службы батареи</string>
 
+    <!-- Notch -->
+    <string name="notch_category_title">Вырез экрана</string>
     <string name="hide_notch_title">Скрыть вырез</string>
     <string name="hide_notch_summary">Принудительно скрыть вырез экрана</string>
+    <string name="display_cutout_force_fullscreen_title">Приложения в полный экран</string>
+    <string name="display_cutout_force_fullscreen_summary">Приложения будут принудительно игнорировать вырез экрана</string>
 
     <!-- Navigation settings -->
     <string name="back_height_low_label">Весь экран</string>
