Settings: Optional haptic feedback on back gesture [1/2]
Change-Id: I3bb3e1cd14b8509cb3bbe7daf8725c3a344e355c
Signed-off-by: DennySPb <dennyspb@gmail.com>

--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -52,4 +52,7 @@
     <!-- Volume link notification -->
     <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
 
+    <!-- Misc gesture settings -->
+    <string name="back_gesture_haptic_title">Haptic feedback</string>
+    <string name="back_gesture_haptic_summary">Enable haptic tick effect on back gesture</string>
 </resources>
