--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -49,4 +49,8 @@
     <!-- Volume link notification -->
     <string name="volume_link_notification_title">Связать громкость звонка и уведомлений</string>
 
+    <!-- Misc gesture settings -->
+    <string name="back_gesture_haptic_title">Вибрация</string>
+    <string name="back_gesture_haptic_summary">Включить вибрацию для жеста назад</string>
+
 </resources>
