security: Add fingerprint wake unlock mode list preference
Change-Id: I201dc3c34237381905070a9ddd6e5fb2230ec3a9
Signed-off-by: DennySPb <dennyspb@gmail.com>

--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -198,4 +198,9 @@
     <string name="model_name">Статус устройства</string>
     <string name="legal_summary">Лицензии и правовая информация</string>
 
+    <!-- Fp wake unlock options -->
+    <string name="fp_wake_unlock_title">Метод распознавания отпечатков</string>
+    <string name="fp_wake_unlock_touch">Касание</string>
+    <string name="fp_wake_unlock_press">Нажатие</string>
+
 </resources>
