--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -236,4 +236,6 @@
     <string name="notification_battery_charge_level_ringtone">Ringtone</string>
     <string name="notification_battery_charge_level_silent">Silent</string>
 
+    <!-- Refresh rate -->
+    <string name="refresh_rate_title">Screen refresh rate</string>
 </resources>
