--- a/res/values/syberia_strings.xml
+++ b/res/values/syberia_strings.xml
@@ -362,5 +362,9 @@
     <string name="navbar_category">Navigation bar</string>
     <string name="navigation_bar_ime_space_title">IME button space</string>
     <string name="navigation_bar_ime_space_summary">Show IME button space below keyboard</string>
+    
+    <!-- Hotspot extras -->
+    <string name="tethering_allow_vpn_upstreams_title">Allow clients to use VPNs</string>
+    <string name="tethering_allow_vpn_upstreams_summary">Permit hotspot clients to use this device\u2019s VPN connections for upstream connectivity</string>
 
 </resources>
