--- a/res/values-ru/syberia_strings.xml
+++ b/res/values-ru/syberia_strings.xml
@@ -203,4 +203,31 @@
     <string name="fp_wake_unlock_touch">Касание</string>
     <string name="fp_wake_unlock_press">Нажатие</string>
 
+    <!-- Face Unlock -->
+    <string name="security_settings_face_unlock_redo_face_scan_summary">Удалить существующее сканирование лица и создайте новое</string>
+    <string name="security_settings_face_unlock_redo_face_scan_title">Повторить сканирование лица</string>
+    <string name="face_redo_confirm_btn">Повторить</string>
+    <string name="face_redo_warning_msg">Вы хотите удалить существующий скан лица и создать новый?</string>
+    <string name="face_unlock_method_title">Разблокировка лицом на экране блокировки</string>
+    <string name="face_unlock_method_default">Когда экран включен</string>
+    <string name="face_unlock_method_swipe">По свайпу вверх</string>
+
+    <!-- Immersive Navigation -->
+    <string name="gesture_navbar_category_title">Navigation bar</string>
+    <string name="immersive_navigation_title">Immersive navigation</string>
+    <string name="immersive_navigation_summary">Hide the gesture pill and navigation bar padding.</string>
+
+    <!-- Gesture navbar length -->
+    <string name="gesture_navbar_length_title">Длина полоски</string>
+    <string name="hide_label">Скрытая</string>
+    <string name="long_label">Длинная</string>
+
+    <!-- Back gesture animation -->
+    <string name="back_gesture_arrow_message">Анимация жеста наза</string>
+    <string name="back_gesture_arrow_summary">Отображать стрелку для жеста назад</string>
+
+    <!-- IME button space -->
+    <string name="navigation_bar_ime_space_title">Пространство под клавиатурой</string>
+    <string name="navigation_bar_ime_space_summary">Оставлять дополнительное пространство под клавиатурой</string>
+
 </resources>
